K8s/backend-deploymennt.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: gitdev-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend
        image: sror/gitdev-backend:latest

        ports:
        - containerPort: 3000
