K8s/backend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: gitdev-app
spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: YOUR_DOCKERHUB_USERNAME/github-profile-backend:latest

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
