K8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: gitdev-app

spec:
  selector:
    app: frontend

  ports:
  - port: 5173
    targetPort: 5173

  type: NodePort
